# postmarket-os-jaraco-starter

./: APKBUILD  CODEX_INSTRUCTIONS.md  LICENSE  Makefile  README.md  blog-post.md  post.md  pyproject.toml  register-install.sh  setup.py  spec.md  starter.sample.json  update-doas.conf.sh
.github/workflows/: alpine-package.yml  ci.yml
data/: io.jaraco.Starter.desktop  io.jaraco.Starter.metainfo.xml  io.jaraco.Starter.policy
src/jaraco_starter/: __init__.py  runner.py
tests/: test_runner.py
