[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco-starter"
version = "0.1.0"
description = "Config-driven launcher for postmarketOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyGObject",
]

[project.scripts]
jaraco-starter = "jaraco_starter.app:main"
